--- a/source/form.html
+++ b/source/form.html
@@ -43,59 +43,97 @@
 
       <section class="page-main__form">
 
-
-
         <form class="form" action="https://echo.htmlacademy.ru/courses" method="get" target="_blank">
 
-          <p class="form__title">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+          <p class="form__text form__taxt--hint">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
-          <div class="form__name">
-            <label class="name__label" for="name">Имя:*</label>
-            <input class="name__input" type="text" id="name" name="name_cat" placeholder="Барсик">
-          </div>
+          <ul class="form__list">
 
-          <div class="form__weight">
-            <label class="weight__label" for="weight">Вес (кг):*</label>
-            <input class="weight__input" type="number" id="weight" name="weight-cat" placeholder="7">
-          </div>
-
-          <div class="form__age">
-            <label class="age__label" for="age">Возраст (лет):</label>
-            <input class="age__input" type="number" id="age" name="age-cat" placeholder="7">
-          </div>
-
-          <ul class="form-radio__list">
-
-            <li class="form-radio__item">
-              <input class="form-radio__input" type="radio" id="yes" value="yes" name="bluetooth" checked>
-              <label class="form-radio__label" for="yes">Похудение</label>
+            <li class="form__item">
+              <label class="form__label" for="name">Имя:*</label>
+              <input class="form__input" type="text" id="name" name="name_cat" placeholder="Барсик">
             </li>
 
-            <li class="form-radio__item">
-              <input class="form-radio__input" type="radio" id="yes" value="yes" name="bluetooth" checked>
-              <label class="form-radio__label" for="yes">Набор массы</label>
+            <li class="form__item">
+              <label class="form__label" for="weight">Вес (кг):*</label>
+              <input class="form__input" type="number" id="weight" name="weight-cat" placeholder="7">
             </li>
 
-            <li class="form-radio__item">
-              <input class="form-radio__input" type="radio" id="yes" value="yes" name="bluetooth" checked>
-              <label class="form-radio__label" for="yes">Не знаю (нужен совет)</label>
+            <li class="form__item">
+              <label class="form__label" for="age">Возраст (лет):</label>
+              <input class="form__input" type="number" id="age" name="age-cat" placeholder="7">
+            </li>
+          </ul>
+
+          <ul class="form__radio-list">
+
+            <li class="form__radio-item">
+              <input class="form__radio-input" type="radio" id="slim" value="lose-weight" name="program" checked>
+              <label class="form__radio-label" for="slim">Похудение</label>
+            </li>
+
+            <li class="form__radio-item">
+              <input class="form__radio-input" type="radio" id="fat" value="weight-gain" name="program">
+              <label class="form__radio-label" for="fat">Набор массы</label>
+            </li>
+
+            <li class="form__radio-item">
+              <input class="form__radio-input" type="radio" id="dn" value="dont-know" name="program">
+              <label class="form-radio__label" for="dn">Не знаю (нужен совет)</label>
             </li>
           </ul>
 
           <h3 class="form__subtitle">Контактные данные (владельца кота)</h3>
 
+          <ul class="form__list">
+
+            <li class="form__item">
+              <label class="form__label" for="mail">E-mail:*</label>
+              <input class="form__input form__input--mail"  type="email" id="mail" name="e-mail" placeholder="kuklachev@gmail.com">
+            </li>
+
+            <li class="form__item">
+              <label class="form__label" for="phone">Телефон:*</label>
+              <input class="form__input form__input--phone" type="tel" id="phone" name="phone-number" placeholder="8 (960) 900-60-90">
+            </li>
+          </ul>
+
           <h3 class="form__subtitle">Комментарий</h3>
+
+          <div class="form__message">
+            <label class="visually-hidden" for="msg">Описание повадок кота</label>
+            <textarea class="form__message-textarea" id="msg" name="message" placeholder="Расскажите обо всех повадках кота"></textarea>
+          </div>
 
           <h3 class="form__subtitle">Дополнительно</h3>
 
+          <ul class="form__checkbox-list">
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-input" type="checkbox" id="sweetener" name="sugar-subtitute" checked>
+              <label class="form__checkbox-label" for="sweetener">Сахарозаменитель</label>
+            </li>
+
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-input" type="checkbox" id="water" name="clean-water">
+              <label class="form__checkbox-label" for="water">Питьевая вода</label>
+            </li>
+
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-input" type="checkbox" id="mlk" name="milk">
+              <label class="form__checkbox-label" for="mlk">Молоко</label>
+            </li>
+
+            <li class="form__checkbox-item">
+              <input class="form__checkbox-input" type="checkbox" id="vtmns" name="vitamins">
+              <label class="form__checkbox-label" for="vtmns">Витамины</label>
+            </li>
+          </ul>
+
           <button class="form__button button">Отправить заявку</button>
 
-          <p class="form__footnote">* — Обязательные поля</p>
-
+          <p class="form__text form__text--footnote">* — Обязательные поля</p>
         </form>
       </section>
-
-
 
       <section class="contacts">
         <h2 class="visually-hidden">Контакты</h2>
