--- a/source/index.html
+++ b/source/index.html
@@ -49,7 +49,7 @@
 
         <img class="promo__img" src="./img/promo/promo-food.jpg" width="280" height="270" alt="изображение упаковки питания cat energy">
 
-        <a class="promo__link" href="#">Подобрать программу</a>
+        <a class="button promo__link" href="#">Подобрать программу</a>
       </section>
 
       <section class="programs">
