разметка внутренних страниц(правки)

--- a/source/form.html
+++ b/source/form.html
@@ -45,7 +45,7 @@
 
         <form class="form" action="https://echo.htmlacademy.ru/courses" method="get" target="_blank">
 
-          <p class="form__text form__taxt--hint">Заполните анкету, и мы подберем программу питания для вашего кота</p>
+          <p class="form__text form__text--hint">Заполните анкету, и мы подберем программу питания для вашего кота</p>
 
           <ul class="form__list">
 
@@ -129,7 +129,7 @@
             </li>
           </ul>
 
-          <button class="form__button button">Отправить заявку</button>
+          <button class="form__button button" type="submit">Отправить заявку</button>
 
           <p class="form__text form__text--footnote">* — Обязательные поля</p>
         </form>
