--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,22 +43,22 @@
 
       <section class="catalog">
 
-        <article class="catalog__product-card">
+        <article class="product-card">
           <img class="product-card__img" src="./img/catalog/product-card-1.png" alt="" width="68" height="86">
           <h3 class="product-card__title">cat energy pro 500 г</h3>
 
           <table class="product-card__table">
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Масса</td>
               <td class="product-card__table-value">500 г</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Вкус</td>
               <td class="product-card__table-value">Курица</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Цена</td>
               <td class="product-card__table-value">700 Р.</td>
             </tr>
@@ -67,22 +67,22 @@
           <a class="button product-card__button" href="#">Заказать</a>
         </article>
 
-        <article class="catalog__product-card">
+        <article class="product-card">
           <img class="product-card__img" src="./img/catalog/product-card-2.png" width="84" height="101" alt="">
           <h3 class="product-card__title">cat energy pro 1000 г</h3>
 
           <table class="product-card__table">
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Масса</td>
               <td class="product-card__table-value">1000 г</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Вкус</td>
               <td class="product-card__table-value">Курица</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Цена</td>
               <td class="product-card__table-value">1000 Р.</td>
             </tr>
@@ -91,23 +91,22 @@
           <a class="button product-card__button" href="#">Заказать</a>
         </article>
 
-
-        <article class="catalog__product-card">
+        <article class="product-card">
           <img class="product-card__img" src="./img/catalog/product-card-3.png" width="68" height="78" alt="">
           <h3 class="product-card__title">cat energy pro 500 г</h3>
 
           <table class="product-card__table">
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Масса</td>
               <td class="product-card__table-value">500 г</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Вкус</td>
               <td class="product-card__table-value">Рыба</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Цена</td>
               <td class="product-card__table-value">700 Р.</td>
             </tr>
@@ -116,22 +115,22 @@
           <a class="button product-card__button" href="#">Заказать</a>
         </article>
 
-        <article class="catalog__product-card">
+        <article class="product-card">
           <img class="product-card__img" src="./img/catalog/product-card-4.png" width="84" height="101" alt="">
           <h3 class="product-card__title">cat energy pro 1000 г</h3>
 
           <table class="product-card__table">
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Масса</td>
               <td class="product-card__table-value">1000 г</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Вкус</td>
               <td class="product-card__table-value">Рыба</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Цена</td>
               <td class="product-card__table-value">1000 Р.</td>
             </tr>
@@ -141,22 +140,22 @@
         </article>
 
 
-        <article class="catalog__product-card">
+        <article class="product-card">
           <img class="product-card__img" src="./img/catalog/product-card-5.png" width="68" height="78" alt="">
           <h3 class="product-card__title">cat energy slim 500 г</h3>
 
           <table class="product-card__table">
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Масса</td>
               <td class="product-card__table-value">500 г</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Вкус</td>
               <td class="product-card__table-value">Гречка</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Цена</td>
               <td class="product-card__table-value">400 Р.</td>
             </tr>
@@ -165,23 +164,23 @@
           <a class="button product-card__button" href="#">Заказать</a>
         </article>
 
-        <article class="catalog__product-card">
+        <article class="product-card">
           <img class="product-card__img" src="./img/catalog/product-card-6.png" width="84" height="100" alt="">
 
           <h3 class="product-card__title">cat energy slim 1000 г</h3>
 
           <table class="product-card__table">
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Масса</td>
               <td class="product-card__table-value">1000 г</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Вкус</td>
               <td class="product-card__table-value">Гречка</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Цена</td>
               <td class="product-card__table-value">700 Р.</td>
             </tr>
@@ -191,23 +190,23 @@
         </article>
 
 
-        <article class="catalog__product-card">
+        <article class="product-card">
           <img class="product-card__img" src="./img/catalog/product-card-7.png" width="72" height="84" alt="">
 
           <h3 class="product-card__title">cat energy slim 500 г</h3>
 
           <table class="product-card__table">
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Масса</td>
               <td class="product-card__table-value">500 г</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Вкус</td>
               <td class="product-card__table-value">Рис</td>
             </tr>
 
-            <tr class="product-card__table-string">
+            <tr class="product-card__table-row">
               <td class="product-card__table-name">Цена</td>
               <td class="product-card__table-value">500 Р.</td>
             </tr>
@@ -216,11 +215,11 @@
           <a class="button product-card__button" href="#">Заказать</a>
         </article>
 
-        <article class="catalog__product-card--last">
+        <article class="product-card product-card--last">
           <img class="product-card__icon" src="./img/icon-plus.svg" width="30" height="30" alt="">
           <p class="product-card__title">Показать еще 100500 товаров</p>
           <p class="product-card__text">На самом деле вкусов гораздо больше!</p>
-          <a class="button product-card__button--last" href="#">Показать все</a>
+          <a class="button product-card__button product-card__button--last" href="#">Показать все</a>
         </article>
       </section>
 
@@ -228,7 +227,7 @@
 
         <h2 class="catalog-further__title">Дополнительные товары</h2>
 
-        <article class="catalog-further__card">
+        <article class="card">
           <h3 class="card__title">Сахарозаменитель</h3>
           <div class="card__text">
             <p class="card__text-name">1 упаковка (100 г)</p>
@@ -237,7 +236,7 @@
           <a class="button card__button" href="#">Заказать</a>
         </article>
 
-        <article class="catalog-further__card">
+        <article class="card">
           <h3 class="card__title">Питьевая вода</h3>
           <div class="card__text">
             <p class="card__text-name">5 литров</p>
@@ -246,7 +245,7 @@
           <a class="button card__button" href="#">Заказать</a>
         </article>
 
-        <article class="catalog-further__card">
+        <article class="card">
           <h3 class="card__title">Молоко</h3>
           <div class="card__text">
             <p class="card__text-name">1 литр</p>
@@ -255,7 +254,7 @@
           <a class="button card__button" href="#">Заказать</a>
         </article>
 
-        <article class="catalog-further__card">
+        <article class="card">
           <h3 class="card__title">Витамины</h3>
           <div class="card__text">
             <p class="card__text-name">1 упаковка (30 г)</p>
