--- a/source/form.html
+++ b/source/form.html
@@ -65,21 +65,21 @@
             </li>
           </ul>
 
-          <ul class="form__radio-list">
+          <ul class="form__list">
 
-            <li class="form__radio-item">
+            <li class="form__item">
               <input class="form__radio-input" type="radio" id="slim" value="lose-weight" name="program" checked>
-              <label class="form__radio-label" for="slim">Похудение</label>
+              <label class="form__label form__label--radio" for="slim">Похудение</label>
             </li>
 
-            <li class="form__radio-item">
+            <li class="form__item">
               <input class="form__radio-input" type="radio" id="fat" value="weight-gain" name="program">
-              <label class="form__radio-label" for="fat">Набор массы</label>
+              <label class="form__label form__label--radio" for="fat">Набор массы</label>
             </li>
 
-            <li class="form__radio-item">
+            <li class="form__item">
               <input class="form__radio-input" type="radio" id="dn" value="dont-know" name="program">
-              <label class="form-radio__label" for="dn">Не знаю (нужен совет)</label>
+              <label class="form__label form__label--radio" for="dn">Не знаю (нужен совет)</label>
             </li>
           </ul>
 
@@ -107,25 +107,25 @@
 
           <h3 class="form__subtitle">Дополнительно</h3>
 
-          <ul class="form__checkbox-list">
-            <li class="form__checkbox-item">
+          <ul class="form__list">
+            <li class="form__item">
               <input class="form__checkbox-input" type="checkbox" id="sweetener" name="sugar-subtitute" checked>
-              <label class="form__checkbox-label" for="sweetener">Сахарозаменитель</label>
+              <label class="form__label form__label--checkbox" for="sweetener">Сахарозаменитель</label>
             </li>
 
-            <li class="form__checkbox-item">
+            <li class="form__item">
               <input class="form__checkbox-input" type="checkbox" id="water" name="clean-water">
-              <label class="form__checkbox-label" for="water">Питьевая вода</label>
+              <label class="form__label form__label--checkbox" for="water">Питьевая вода</label>
             </li>
 
-            <li class="form__checkbox-item">
+            <li class="form__item">
               <input class="form__checkbox-input" type="checkbox" id="mlk" name="milk">
-              <label class="form__checkbox-label" for="mlk">Молоко</label>
+              <label class="form__label form__label--checkbox" for="mlk">Молоко</label>
             </li>
 
-            <li class="form__checkbox-item">
+            <li class="form__item">
               <input class="form__checkbox-input" type="checkbox" id="vtmns" name="vitamins">
-              <label class="form__checkbox-label" for="vtmns">Витамины</label>
+              <label class="form__label form__label--checkbox" for="vtmns">Витамины</label>
             </li>
           </ul>
 
