--- a/source/index.html
+++ b/source/index.html
@@ -118,30 +118,34 @@
 
       <section class="example">
 
-        <h2 class="example__title">Живой пример</h2>
+        <div class="example__information-wrapper">
+          <h2 class="example__title">Живой пример</h2>
 
-        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-        <ul class="example__specification-list">
-          <li class="specification-item">
-            <p class="specification-item__value">5 кг</p>
-            <p class="specification-item__name">снижение веса</p>
-          </li>
+          <ul class="example__specification-list">
+            <li class="specification-item">
+              <p class="specification-item__value">5 кг</p>
+              <p class="specification-item__name">снижение веса</p>
+            </li>
 
-          <li class="specification-item">
-            <p class="specification-item__value">60 дней</p>
-            <p class="specification-item__name">затрачено времени</p>
-          </li>
-        </ul>
+            <li class="specification-item">
+              <p class="specification-item__value">60 дней</p>
+              <p class="specification-item__name">затрачено времени</p>
+            </li>
+          </ul>
 
-        <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
+          <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
+        </div>
+
+
 
         <section class="example__slider">
           <div class="example__slide--before">
             <img class="example__slide-img" src="./img/example/example-cat-fat.png" width="311" height="232" alt="Изображение кота до похудения">
           </div>
 
-          <div class="example__slide--after">
+          <div class="example__slider example__slide--after">
             <img class="example__slide-img" src="./img/example/example-cat-skinny.png" height="232" alt="Изображение кота до похудения">
           </div>
 
@@ -156,12 +160,14 @@
           </div>
 
         </section>
+      </section>
 
-        <section class="contacts">
+      <section class="contacts">
+        <div class="contacts__wrapper">
           <p class="contacts__text">приглашаем к сотрудничеству дилеров!</p>
           <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" width="320" height="362" allowfullscreen></iframe>
-        </section>
+        </div>
+        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" width="100%" height="362" allowfullscreen></iframe>
       </section>
     </main>
 
