стили главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
 
           <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-          <ul class="example__specification-list">
+          <ul class="specification-list">
             <li class="specification-item">
               <p class="specification-item__value">5 кг</p>
               <p class="specification-item__name">снижение веса</p>
