--- a/source/index.html
+++ b/source/index.html
@@ -61,19 +61,23 @@
 
         <ul class="programs__list">
           <li class="programs__item">
-            <div class="programs__icon-background">
-              <img class="programs__img" src="./img/programs/icon-programs-cat-slim.svg" width="36" height="50" alt="Изображение стройного кота">
+            <div class="programs__title-wrapper">
+              <div class="programs__icon-background">
+                <img class="programs__img" src="./img/programs/icon-programs-cat-slim.svg" width="36" height="50" alt="Изображение стройного кота">
+              </div>
+              <h3 class="programs__title">Похудение</h3>
             </div>
-            <h3 class="programs__title">Похудение</h3>
             <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
             <a class="programs__link" href="#">Каталог slim</a>
           </li>
 
           <li class="programs__item">
-            <div class="programs__icon-background">
-              <img class="programs__img" src="./img/programs/icon-programs-cat-pro.svg" width="67" height="28" alt="Изображение стройного кота">
+            <div class="programs__title-wrapper">
+              <div class="programs__icon-background">
+                <img class="programs__img" src="./img/programs/icon-programs-cat-pro.svg" width="67" height="28" alt="Изображение стройного кота">
+              </div>
+              <h3 class="programs__title">Набор массы</h3>
             </div>
-            <h3 class="programs__title">Набор массы</h3>
             <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
             <a class="programs__link" href="#">Каталог pro</a>
           </li>
@@ -123,15 +127,15 @@
 
           <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-          <ul class="specification-list">
-            <li class="specification-item">
-              <p class="specification-item__value">5 кг</p>
-              <p class="specification-item__name">снижение веса</p>
+          <ul class="specification__list">
+            <li class="specification__item">
+              <p class="specification__item-value">5 кг</p>
+              <p class="specification__item-name">снижение веса</p>
             </li>
 
-            <li class="specification-item">
-              <p class="specification-item__value">60 дней</p>
-              <p class="specification-item__name">затрачено времени</p>
+            <li class="specification__item">
+              <p class="specification__item-value">60 дней</p>
+              <p class="specification__item-name">затрачено времени</p>
             </li>
           </ul>
 
@@ -209,7 +213,7 @@
       </section>
 
       <section class="copyright">
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/htmlcss">
           <p class="copyright__title">HTML academy</p>
           <img class="copyright__img" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="Логотип HTML academy">
         </a>
