стили главной страницы (ссылки на внутренние страницы)

--- a/source/index.html
+++ b/source/index.html
@@ -29,11 +29,11 @@
             </li>
 
             <li class="main-nav__item">
-              <a href="#">каталог продукции</a>
+              <a href="catalog.html">каталог продукции</a>
             </li>
 
             <li class="main-nav__item">
-              <a href="#">подбор программы</a>
+              <a href="form.html">подбор программы</a>
             </li>
           </ul>
         </div>
@@ -52,7 +52,7 @@
 
         <img class="promo__img" src="./img/promo/promo-food.png" width="280" height="270" alt="изображение упаковки питания cat energy">
 
-        <a class="button promo__link" href="#">Подобрать программу</a>
+        <a class="button promo__link" href="form.html">Подобрать программу</a>
       </section>
 
       <section class="programs">
