стили страницы каталога и формы (catalog, catalog-further, form, present)

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -232,7 +232,7 @@
 
         <article class="product-card product-card--last">
           <img class="product-card__icon" src="./img/icon-plus.svg" width="30" height="30" alt="">
-          <p class="product-card__title">Показать еще 100500 товаров</p>
+          <p class="product-card__title product-card__title--last">Показать еще 100500 товаров</p>
           <p class="product-card__text">На самом деле вкусов гораздо больше!</p>
           <a class="button product-card__button product-card__button--last" href="#">Показать все</a>
         </article>
