--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
           <ul class="specification__list">
             <li class="specification__item">
               <p class="specification__item-value">5 кг</p>
-              <p class="specification__item-name">снижение веса</p>
+              <p class="specification__item-name">снижение <br> веса</p>
             </li>
 
             <li class="specification__item">
