--- a/source/form.html
+++ b/source/form.html
@@ -9,17 +9,18 @@
   <body class="page__body">
 
     <header class="page-header">
-      <a class="page-header__logo" href="index.html">
-        <img class="page-header__logo-img" src="./img/logo-header-img.svg" width="34" height="38" alt="Логотип cat energy">
-        <img class="page-header__logo-title" src="./img/logo-header-title.svg" width="101" height="18" alt="Заголовок cat energy">
-      </a>
+      <div class="page-header__row-wrapper">
+        <a class="page-header__logo" href="index.html">
+          <img class="page-header__logo-img" src="./img/logo-header-img.svg" width="34" height="38" alt="Логотип cat energy">
+          <img class="page-header__logo-title" src="./img/logo-header-title.svg" width="101" height="18" alt="Заголовок cat energy">
+        </a>
 
-      <nav class="main-nav">
-
-        <button class="main-nav__toggle" type="button">
+        <button class="page-header__toggle" type="button">
           <span class="visually-hidden">Открыть/закрыть меню</span>
         </button>
+      </div>
 
+      <nav class="main-nav">
         <div class="main_nav__inner">
           <ul class="main-nav__list">
 
@@ -28,11 +29,11 @@
             </li>
 
             <li class="main-nav__item">
-              <a href="#">каталог продукции</a>
+              <a href="catalog.html">каталог продукции</a>
             </li>
 
             <li class="main-nav__item">
-              <a href="#">подбор программы</a>
+              <a href="form.html">подбор программы</a>
             </li>
           </ul>
         </div>
@@ -138,16 +139,17 @@
       </section>
 
       <section class="contacts">
-        <h2 class="visually-hidden">Контакты</h2>
-        <p class="contacts__text">приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" width="320" height="362" allowfullscreen></iframe>
+        <div class="contacts__wrapper">
+          <p class="contacts__text">приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        </div>
+        <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" width="100%" height="362" allowfullscreen></iframe>
       </section>
     </main>
 
     <footer class="page-footer">
 
-      <a class="page-footer__logo" href="index.html"><img src="./img/logo-footer.svg" width="128" height="24" alt="Логотип cat energy"></a>
+      <a class="page-footer__logo"><img src="./img/logo-footer.svg" width="128" height="24" alt="Логотип cat energy"></a>
 
       <section class="social">
 
@@ -183,7 +185,7 @@
       </section>
 
       <section class="copyright">
-        <a href="https://htmlacademy.ru/intensive/htmlcss">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/htmlcss">
           <p class="copyright__title">HTML academy</p>
           <img class="copyright__img" src="./img/logo-htmlacademy.svg" width="27" height="34" alt="Логотип HTML academy">
         </a>
