--- a/source/form.html
+++ b/source/form.html
@@ -68,7 +68,7 @@
             </li>
           </ul>
 
-          <ul class="form__list">
+          <ul class="form__list form__list--radio">
 
             <li class="form__item">
               <input class="form__radio-input" type="radio" id="slim" value="lose-weight" name="program" checked>
@@ -86,9 +86,9 @@
             </li>
           </ul>
 
-          <h3 class="form__subtitle">Контактные данные (владельца кота)</h3>
+          <h3 class="form__subtitle">Контактные данные <br> (владельца кота)</h3>
 
-          <ul class="form__list">
+          <ul class="form__list form__list--contacts">
 
             <li class="form__item">
               <label class="form__label" for="mail">E-mail:*</label>
@@ -105,12 +105,12 @@
 
           <div class="form__message">
             <label class="visually-hidden" for="msg">Описание повадок кота</label>
-            <textarea class="form__message-textarea" id="msg" name="message" placeholder="Расскажите обо всех повадках кота"></textarea>
+            <textarea class="form__input form__message-textarea" id="msg" name="message" placeholder="Расскажите обо всех повадках кота"></textarea>
           </div>
 
           <h3 class="form__subtitle">Дополнительно</h3>
 
-          <ul class="form__list">
+          <ul class="form__list form__list--optional">
             <li class="form__item">
               <input class="form__checkbox-input" type="checkbox" id="sweetener" name="sugar-subtitute" checked>
               <label class="form__label form__label--checkbox" for="sweetener">Сахарозаменитель</label>
