--- a/source/form.html
+++ b/source/form.html
@@ -42,7 +42,7 @@
 
     <main class="page-main">
 
-      <h1 class="page-main__title">Подбор программы</h1>
+      <h1 class="page-main__title page-main__title--form">Подбор программы</h1>
 
       <section class="page-main__form">
 
