--- a/source/index.html
+++ b/source/index.html
@@ -127,15 +127,15 @@
 
           <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-          <ul class="specification__list">
-            <li class="specification__item">
-              <p class="specification__item-value">5 кг</p>
-              <p class="specification__item-name">снижение <br> веса</p>
+          <ul class="example__specification-list">
+            <li class="example__specification-item">
+              <p class="example__specification-value">5 кг</p>
+              <p class="example__specification-name">снижение <br> веса</p>
             </li>
 
-            <li class="specification__item">
-              <p class="specification__item-value">60 дней</p>
-              <p class="specification__item-name">затрачено времени</p>
+            <li class="example__specification-item">
+              <p class="example__specification-value">60 дней</p>
+              <p class="example__specification-name">затрачено времени</p>
             </li>
           </ul>
 
