--- a/source/catalog.html
+++ b/source/catalog.html
@@ -25,7 +25,7 @@
           <ul class="main-nav__list">
 
             <li class="main-nav__item">
-              <a href="#">главная</a>
+              <a href="index.html">главная</a>
             </li>
 
             <li class="main-nav__item">
