--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
           <ul class="main-nav__list">
 
             <li class="main-nav__item">
-              <a href="#">главная</a>
+              <a>главная</a>
             </li>
 
             <li class="main-nav__item">
@@ -52,7 +52,7 @@
 
         <img class="promo__img" src="./img/promo/promo-food.png" width="280" height="270" alt="изображение упаковки питания cat energy">
 
-        <a class="button promo__link" href="form.html">Подобрать программу</a>
+        <a class="button promo__button" href="form.html">Подобрать программу</a>
       </section>
 
       <section class="programs">
