главная (information, programs)

--- a/source/index.html
+++ b/source/index.html
@@ -2,8 +2,8 @@
 <html class="page" lang="ru">
   <head>
     <link rel="stylesheet" href="./css/style.css">
-
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body class="page__body">
@@ -63,7 +63,7 @@
           <li class="programs__item">
             <div class="programs__title-wrapper">
               <div class="programs__icon-background">
-                <img class="programs__img" src="./img/programs/icon-programs-cat-slim.svg" width="36" height="50" alt="Изображение стройного кота">
+                <img class="programs__img programs__img--slim" src="./img/programs/icon-programs-cat-slim.svg" width="36" height="50" alt="Изображение стройного кота">
               </div>
               <h3 class="programs__title">Похудение</h3>
             </div>
@@ -74,7 +74,7 @@
           <li class="programs__item">
             <div class="programs__title-wrapper">
               <div class="programs__icon-background">
-                <img class="programs__img" src="./img/programs/icon-programs-cat-pro.svg" width="67" height="28" alt="Изображение стройного кота">
+                <img class="programs__img programs__img--pro" src="./img/programs/icon-programs-cat-pro.svg" width="67" height="28" alt="Изображение стройного кота">
               </div>
               <h3 class="programs__title">Набор массы</h3>
             </div>
@@ -95,6 +95,7 @@
               <img class="information__img" src="./img/information/logo-information-1.svg" width="30" height="32" alt="Изображение листка растения">
             </div>
             <p class="information__text">Функциональное питание содержит только полезные питательные вещества.</p>
+            <p class="information__number">1</p>
           </li>
 
           <li class="information__item" >
@@ -102,6 +103,7 @@
               <img class="information__img" src="./img/information/logo-information-2.svg" width="29" height="31" alt="Изображение стакана заполненного шипучим веществом">
             </div>
             <p class="information__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            <p class="information__number">2</p>
           </li>
 
           <li class="information__item" >
@@ -109,13 +111,15 @@
               <img class="information__img" src="./img/information/logo-information-3.svg" width="25" height="30" alt="Изображение столовых приборов">
             </div>
             <p class="information__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            <p class="information__number">3</p>
           </li>
 
-          <li class="information__item" >
+          <li class="information__item">
             <div class="information__background-icon">
               <img class="information__img" src="./img/information/logo-information-4.svg" width="32" height="33" alt="Изображение весов">
             </div>
             <p class="information__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <p class="information__number">4</p>
           </li>
         </ul>
       </section>
