--- a/source/form.html
+++ b/source/form.html
@@ -2,8 +2,8 @@
 <html class="page" lang="ru">
   <head>
     <link rel="stylesheet" href="./css/style.css">
-
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body class="page__body">
