главная (footer, contacts, example)

--- a/source/index.html
+++ b/source/index.html
@@ -25,15 +25,15 @@
           <ul class="main-nav__list">
 
             <li class="main-nav__item">
-              <a>главная</a>
+              <a class="main-nav__link main-nav__link--active">главная</a>
             </li>
 
             <li class="main-nav__item">
-              <a href="catalog.html">каталог продукции</a>
+              <a class="main-nav__link main-nav__link--active" href="catalog.html">каталог продукции</a>
             </li>
 
             <li class="main-nav__item">
-              <a href="form.html">подбор программы</a>
+              <a class="main-nav__link main-nav__link--active" href="form.html">подбор программы</a>
             </li>
           </ul>
         </div>
@@ -44,7 +44,7 @@
 
       <h1 class="visually-hidden">"Cat energy" - питание для котов</h1>
 
-      <section class="promo">
+      <!-- <section class="promo">
         <div class="promo__background-wrapper">
           <h2 class="promo__title">Функциональное питание для котов</h2>
           <p class="promo__slogan">Занялся собой? Займись котом!</p>
@@ -53,7 +53,7 @@
         <img class="promo__img" src="./img/promo/promo-food.png" width="280" height="270" alt="изображение упаковки питания cat energy">
 
         <a class="button promo__button" href="form.html">Подобрать программу</a>
-      </section>
+      </section> -->
 
       <section class="programs">
 
@@ -124,7 +124,7 @@
         </ul>
       </section>
 
-      <section class="example">
+      <!-- <section class="example">
 
         <div class="example__information-wrapper">
           <h2 class="example__title">Живой пример</h2>
@@ -146,8 +146,6 @@
           <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
         </div>
 
-
-
         <section class="example__slider">
           <div class="example__slide--before">
             <img class="example__slide-img" src="./img/example/example-cat-fat.png" width="311" height="232" alt="Изображение кота до похудения">
@@ -168,12 +166,12 @@
           </div>
 
         </section>
-      </section>
+      </section> -->
 
       <section class="contacts">
         <div class="contacts__wrapper">
           <p class="contacts__text">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+          <p class="contacts__address">ул. Большая<br> Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" width="100%" height="362" allowfullscreen></iframe>
       </section>
