главная (example, information, programs)

--- a/source/index.html
+++ b/source/index.html
@@ -124,7 +124,7 @@
         </ul>
       </section>
 
-      <!-- <section class="example">
+      <section class="example">
 
         <div class="example__information-wrapper">
           <h2 class="example__title">Живой пример</h2>
@@ -166,7 +166,7 @@
           </div>
 
         </section>
-      </section> -->
+      </section>
 
       <section class="contacts">
         <div class="contacts__wrapper">
