--- a/source/index.html
+++ b/source/index.html
@@ -51,7 +51,9 @@
           <img class="promo__img" src="./img/promo/promo-food.png" width="280" height="270" alt="изображение упаковки питания cat energy">
           <a class="button promo__button" href="form.html">Подобрать программу</a>
         </div>
-        <div class="promo__background-wrapper"></div>
+        <div class="promo__background-wrapper">
+          <span class="visually-hidden">Фон с котиком</span>
+        </div>
       </section>
 
       <section class="programs">
@@ -128,22 +130,23 @@
         <div class="example__wrapper">
           <div class="example__information-wrapper">
             <h2 class="example__title">Живой пример</h2>
-
             <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
 
-            <ul class="example__specification-list">
-              <li class="example__specification-item">
-                <p class="example__specification-value">5 кг</p>
-                <p class="example__specification-name">снижение <br> веса</p>
-              </li>
+            <div class="example__specification-result-wrapper">
+              <ul class="example__specification-list">
+                <li class="example__specification-item">
+                  <p class="example__specification-value">5 кг</p>
+                  <p class="example__specification-name">снижение <br> веса</p>
+                </li>
 
-              <li class="example__specification-item">
-                <p class="example__specification-value">60 дней</p>
-                <p class="example__specification-name">затрачено времени</p>
-              </li>
-            </ul>
+                <li class="example__specification-item">
+                  <p class="example__specification-value">60 дней</p>
+                  <p class="example__specification-name">затрачено времени</p>
+                </li>
+              </ul>
 
-            <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
+              <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
+            </div>
           </div>
 
           <section class="example__slider">
@@ -171,7 +174,7 @@
       <section class="contacts">
         <div class="contacts__wrapper">
           <p class="contacts__text">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая<br> Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
+          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
         </div>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1627216695943!5m2!1sru!2sru" width="100%" height="362" allowfullscreen></iframe>
       </section>
@@ -184,7 +187,6 @@
         <section class="social">
 
           <ul class="social__list">
-
             <li class="social__item">
               <a href="#">
                 <span class="visually-hidden">vkontakte</span>
