Декоративные элементы главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -163,6 +163,17 @@
                 <div class="example__slider-handle example__slider-handle--after"></div>
               </div>
 
+              <div class="example__range">
+                <div class="example__range-scale">
+                  <div class="bar"></div>
+                </div>
+                <div class="example__range-toggle-background">
+                  <div class="example__range-toggle" tabindex="0">
+                    <span class="visually-hidden">переключатель цены</span>
+                  </div>
+                </div>
+              </div>
+
               <button class="example__slider-button example__slider-button--after">Стало</button>
             </div>
           </section>
