--- a/source/index.html
+++ b/source/index.html
@@ -24,15 +24,15 @@
         <ul class="main-nav__list">
 
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active">главная</a>
+            <a class="main-nav__link main-nav__link--active main-nav__index-link main-nav__index-link--active">главная</a>
           </li>
 
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">каталог продукции</a>
+            <a class="main-nav__link main-nav__index-link" href="catalog.html">каталог продукции</a>
           </li>
 
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">подбор программы</a>
+            <a class="main-nav__link main-nav__index-link" href="form.html">подбор программы</a>
           </li>
         </ul>
       </nav>
