Адаптивная графика всех страниц (на проверку)

--- a/source/index.html
+++ b/source/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
   <head>
-    <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./img/favicons/apple.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
@@ -159,11 +161,11 @@
 
             <div class="example__slides">
               <div class="example__slide example__slide--before example__slide--active">
-                <img class="example__slide-img" src="./img/example/example-before.png" srcset="./img/example/example-before@2x.png 2x" width="311" height="232" alt="Изображение кота до похудения">
+                <img class="example__slide-img example__slide-img--before" src="./img/example/example-before.png" srcset="./img/example/example-before@2x.png 2x" width="311" height="232" alt="Изображение кота до похудения">
               </div>
 
               <div class="example__slide example__slide--after">
-                <img class="example__slide-img" src="./img/example/example-after.png" srcset="./img/example/example-after.png" height="232" alt="Изображение кота после похудения">
+                <img class="example__slide-img example__slide-img--after" src="./img/example/example-after.png" srcset="./img/example/example-after.png" height="232" alt="Изображение кота после похудения">
               </div>
             </div>
             <div class="example__slider-buttons">
