--- a/source/index.html
+++ b/source/index.html
@@ -237,7 +237,7 @@
               <a class="social__link" href="#">
                 <span class="visually-hidden">vkontakte</span>
                 <svg class="social__icon" width="23" height="16" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="#vkontakte"></use>
+                  <use xlink:href="./img/sprite.svg#vkontakte"></use>
                 </svg>
               </a>
             </li>
@@ -246,7 +246,7 @@
               <a class="social__link" href="#">
                 <span class="visually-hidden">instagram</span>
                 <svg class="social__icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="#instagram"></use>
+                  <use xlink:href="./img/sprite.svg#instagram"></use>
                 </svg>
               </a>
             </li>
@@ -255,7 +255,7 @@
               <a class="social__link" href="#">
                 <span class="visually-hidden">facebook</span>
                 <svg class="social__icon social__icon--facebook" width="22" height="22" xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="#facebook"></use>
+                  <use xlink:href="./img/sprite.svg#facebook"></use>
                 </svg>
               </a>
             </li>
@@ -266,12 +266,12 @@
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
             <p class="copyright__title">HTML Academy</p>
             <svg  class="copyright__icon" width="27" height="34" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="#html-academy"></use>
+              <use xlink:href="./img/sprite.svg#htmlacademy"></use>
             </svg>
           </a>
         </section>
       </div>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./js/script.min.js"></script>
   </body>
 </html>
