--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="./img/favicons/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./img/favicons/apple.png">
+    <link rel="preload" href="./fonts/oswaldregular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Кэт энерджи</title>
@@ -382,6 +383,6 @@
         </section>
       </div>
     </footer>
-    <script src="./js/script.min.js"></script>
+    <script src="./js/scripts.min.js"></script>
   </body>
 </html>
