pixelperfect всех страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -336,7 +336,7 @@
             <div class="present__wrapper">
               <h2 class="visually-hidden">Акция</h2>
               <img class="present__img" src="./img/present/icon_present.svg" width="78" height="80" alt="Подарочная коробка">
-              <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
+              <p class="present__text">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
             </div>
           </section>
         </div>
