--- a/source/form.html
+++ b/source/form.html
@@ -95,7 +95,7 @@
           </div>
 
           <div class="form__subtitle-wrapper">
-            <h3 class="form__subtitle form__subtitle--contacts">Контактные данные <br> (владельца кота)</h3>
+            <h3 class="form__subtitle form__subtitle--contacts">Контактные данные&nbsp;<br>(владельца кота)</h3>
           </div>
 
           <ul class="form__list form__list--contacts">
