--- a/source/index.html
+++ b/source/index.html
@@ -149,7 +149,7 @@
             <div class="information__background-icon">
               <img class="information__img" src="./img/information/logo-information-4.svg" width="32" height="33" alt="Изображение весов">
             </div>
-            <p class="information__text">Уже через месяц наслаждайтесь изменениями к лучшему<br>вашего питомца!</p>
+            <p class="information__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
             <p class="information__number">4</p>
           </li>
         </ul>
@@ -175,7 +175,7 @@
                 </li>
               </ul>
 
-              <p class="example__result">Затраты на питание: 15 000 РУБ.</p>
+              <p class="example__result"><span class="example__result-name">Затраты на питание:&nbsp;</span><span class="example__result-value">15 000 РУБ.</span></p>
             </div>
           </div>
 
@@ -200,7 +200,7 @@
               <button class="example__slider-button example__slider-button--before">Было</button>
 
               <div class="example__slider-toggle">
-                <div class="example__slider-handle example__slider-handle--after"></div>
+                <div class="example__slider-handle example__slider-handle--before"></div>
               </div>
 
               <div class="example__range">
